add layout files and another collection

--- a/_layouts/digitalobject.html
+++ b/_layouts/digitalobject.html
@@ -1,3 +1,7 @@
 ---
 layout: page
 ---
+<h1>{{ page.artist }} // {{ page.title }} // {{ page.year }}</h1>
+<img src="{{ page.image}}" alt="{{ page.artist }} // {{ page.title }}">
+<p>Owned by: <a href="{{ page.permanent_url }}">{{ page.owner }}</a></p>
+<p>Medium: {{ page.medium }}</p>
