put layout files back to layout page

--- a/_layouts/digitalarchive.html
+++ b/_layouts/digitalarchive.html
@@ -1,5 +1,5 @@
 ---
-layout: digitalarchive
+layout: page
 ---
 <h1>{{ page.name }} // {{ page.title }} // {{ page.year }}</h1>
 <img src="{{ page.screenshot}}" alt="{{ page.country }} // {{ page.name }}">
