--- a/_layouts/digitalobject.html
+++ b/_layouts/digitalobject.html
@@ -1,5 +1,5 @@
 ---
-layout: digitalobject
+layout: page
 ---
 <h1>{{ page.artist }} // {{ page.title }} // {{ page.year }}</h1>
 <img src="{{ page.image}}" alt="{{ page.artist }} // {{ page.title }}">
